add getAllComments feature
